# arybo

./: .gitignore  CHANGELOG  CONTRIBUTORS  LICENSE.txt  README.rst  setup.py
.github/workflows/: dist_publish.yml  petanque_tests.yml  python_tests.yml  python_wheels.yml  tests.yml
arybo/lib/: __init__.py  bool_solver.py  exprs_asm.py  exprs_passes.py  mba_exprs.py  mba_if.py  mba_impl_petanque.py  mba_impl_sympy.py  tester.py
arybo/tools/: __init__.py  identify.py  petanque.py  triton_.py
benchs/: benchs  cmp.py  run-suite.py
docs/: Makefile
docs/source/: concepts.rst  conf.py  index.rst  integration.rst  intro.rst  reference-arybo.rst  reference-libpetanque.rst  reference-pytanque.rst  setup.rst  tutorial.rst  usage.rst
examples/: dirac.py  gen_mba.py  gen_mba2.py  hitb2015_crypto400.py  opaque_predicates.py  sstic2016_crc.py  stribog.py  triton_ast.py  triton_ida.py  triton_ida_patch.py  xor_5C.py  xor_6.py
petanque/: CMakeCompilers.txt  CMakeLists.txt  CMakeRequiredLibraries.txt  MANIFEST.in  README.rst  llvm_distutils_env.bat  setup.py
petanque/bindings/: CMakeLists.txt
petanque/bindings/python/: CMakeLists.txt  pytanque.cpp
petanque/bindings/python/distutils_pa_config/pa/: config.h
petanque/include/pa/: algos.h  analyses.h  app.h  bitfield.h  cast.h  compat.h  config.h.in  dynamic_caller.h  errors.h  exports.h  exprs.h  matrix.h  prettyprinter.h  simps.h  sorted_vector.h  subs.h  symbols.h  syms_hist.h  syms_set.h  traits.h  vector.h  visitors.h
petanque/src/: CMakeLists.txt  analyses.cpp  app.cpp  bitfield.cpp  exprs.cpp  matrix.cpp  ops.cpp  prettyprinter.cpp  simps.cpp  subs.cpp  symbols.cpp  syms_hist.cpp  syms_set.cpp  vector.cpp
petanque/tests/: CMakeLists.txt  algos.cpp  app.cpp  bench.cpp  double_free.cpp  exprs.cpp  identify_ors_no_rec.cpp  matrix.cpp  op_add.cpp  op_complex.cpp  op_esf.cpp  op_mul.cpp  op_names.cpp  op_or.cpp  or_to_esf.cpp  prettyprinter.cpp  random_simplify.cpp  simp.cpp  simp_constants_prop.cpp  simp_expand.cpp  simp_expand_no_rec.cpp  simp_flatten.cpp  simp_flatten_no_rec.cpp  simp_remove_dead_ops.cpp  sort.cpp  sort2.cpp  sorted_vector.cpp  subs.cpp  syms_set.cpp  tests.cpp  tests.h  vec_int.cpp  vector.cpp  vectorial_decomp.cpp  visitors.cpp
tests/arybo/: app.py  examples.py  exprs.py  lib.py  llvm.py  mba_exprs.py
tests/tools/: identify.py  triton_.py
